--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,63 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+
+
+  <ion-grid >
+    <ion-row>
+      <ion-col size="6" class="ion-text-center">
+          <ion-text >
+            <h1>Panel de Administrador ASUUUU</h1>
+          </ion-text>
+
+      </ion-col>
+      <ion-col size="6"  >
+        <ion-button  expand="block" fill="clear"  style="color: red;" >
+          <ion-icon slot="start" name="close"   style="color: red;"></ion-icon>
+     Cerrar sesión
+         </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+
+
+<ion-card class="category-card">
+  <ion-card-header class="ion-no-padding">
+   <ion-item lines="none" >
+   
+   </ion-item>
+  </ion-card-header>
+   
+    <ion-row>
+      <ion-col class="ion-text-center ion-padding"  size="12">
+        <ion-text color="primary">
+          <img src="https://cdn-icons-png.flaticon.com/512/8914/8914187.png"  class="imagen-asu">
+        </ion-text>
+          </ion-col>
+    </ion-row>
+</ion-card>
+
+<ion-grid >
+  <ion-row>
+    <ion-col size="12"  >
+      <ion-button (click)="openNewAgremiado()" expand="block" fill="clear" >
+        <ion-icon slot="start" name="add" ></ion-icon>
+        Agregar Agremiado
+       </ion-button>
+    </ion-col>
+  
+  </ion-row>
+</ion-grid>
+
+
+
+
+
+
+
+
+
+
 </ion-content>
