--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,54 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 2
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content>
+  
+  <ion-grid>
+ <ion-row>
+  <ion-col size="6" class="batipuchungito">
+    <ion-text  >
+      <h1>Agremiados de aqui</h1>
+    </ion-text>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+</ion-col>
+  <ion-col size="6" class="batipuchungito">
+    <ion-button class="asuuu">Imprimir lista</ion-button>
+  </ion-col>
+ </ion-row>
+  </ion-grid>
+ 
+  <ion-grid>
+    <ion-row>
+      <ion-col size="1">Apellido Paterno</ion-col>
+      <ion-col size="1">Apellido Materno</ion-col>
+      <ion-col size="1">Nombre</ion-col>
+      <ion-col size="0.5">Sexo</ion-col>
+      <ion-col size="1">NUP</ion-col>
+      <ion-col size="1">NUE</ion-col>
+      <ion-col size="1">RFC</ion-col>
+      <ion-col size="1">NSS</ion-col>
+      <ion-col size="1">Fecha Nacimiento</ion-col>
+      <ion-col size="1">Teléfono</ion-col>
+      <ion-col size="1">Cuota</ion-col>
+      <ion-col size="1">Acciones</ion-col>
+    </ion-row>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+    <!-- Ejemplo de datos en la tabla (puedes agregar más filas según sea necesario) -->
+    <ion-row>
+      <ion-col size="1">Apellido1</ion-col>
+      <ion-col size="1">Apellido2</ion-col>
+      <ion-col size="1">Nombre1</ion-col>
+      <ion-col size="0.5">M</ion-col>
+      <ion-col size="1">NUP123</ion-col>
+      <ion-col size="1">NUE456</ion-col>
+      <ion-col size="1">RFC789</ion-col>
+      <ion-col size="1">NSS101</ion-col>
+      <ion-col size="1">01/01/1990</ion-col>
+      <ion-col size="1">1234567890</ion-col>
+      <ion-col size="1">Si</ion-col>
+      <ion-col size="1">
+        <ion-button (click)="openEditAgremiado()">Editar</ion-button>
+       
+        <ion-button color="danger" (click)="confirmarEliminacion()">Eliminar 
+           </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
