--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,57 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content >
+  <ion-grid>
+    <ion-row>
+     <ion-col size="6" class="ion-text-center">
+       <ion-text >
+         <h1>Lista de solicitudes</h1>
+       </ion-text>
+   
+   </ion-col>
+    </ion-row>
+     </ion-grid>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+<ion-grid >
+  <ion-row>
+    <ion-col size="4">
+      <ion-label >Fecha de inicio</ion-label>
+      <ion-input
+      type="date"
+         fill="outline"
+         placeholder=" Adquisicion"></ion-input>
+    </ion-col>
+    <ion-col size="4">
+      <ion-label >Fecha de termino</ion-label>
+      <ion-input
+      type="date"
+         fill="outline"
+         placeholder=" Vencimiento"></ion-input>
+    </ion-col>
+    <ion-col size="4">
+      <ion-button class="asuuu">Filtrar</ion-button>
+    </ion-col>
+  </ion-row>
+
+</ion-grid>
+
+
+<ion-content>
+  <ion-grid>
+    <ion-row class="table-header">
+      <ion-col size="2">NUE</ion-col>
+      <ion-col size="5">Fecha de Nacimiento</ion-col>
+      <ion-col size="2">Descargar</ion-col>
+    </ion-row>
+
+    <!-- Ejemplo de datos en la tabla (puedes agregar más filas según sea necesario) -->
+    <ion-row class="table-row">
+      <ion-col size="2">NUE001</ion-col>
+      <ion-col size="5">01/01/1990</ion-col>
+      <ion-col size="2">
+        <ion-button  fill="clear">Descargar</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
 </ion-content>
+</ion-content >
