--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -13,8 +13,8 @@
 
       </ion-col>
       <ion-col size="6"  >
-        <ion-button  expand="block" fill="clear"  style="color: red;" >
-          <ion-icon slot="start" name="close"   style="color: red;"></ion-icon>
+        <ion-button  expand="block" fill="clear"  style="color: red;" (click)="cerrarSesion()">
+          <ion-icon slot="start" name="person-remove"   style="color: red;"></ion-icon>
      Cerrar sesión
          </ion-button>
       </ion-col>
@@ -33,7 +33,7 @@
     <ion-row>
       <ion-col class="ion-text-center ion-padding"  size="12">
         <ion-text color="primary">
-          <img src="https://cdn-icons-png.flaticon.com/512/8914/8914187.png"  class="imagen-asu">
+          <img src="https://iconape.com/wp-content/png_logo_vector/pitico-oaxaca-logo.png"  class="imagen-asu">
         </ion-text>
           </ion-col>
     </ion-row>
