--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -14,7 +14,7 @@
   
   /* Estilos para el botón Descargar */
   ion-button {
-    --color: #007bff; /* Color del botón */
+    --color: #ffffff; /* Color del botón */
     font-size: 14px; /* Tamaño de fuente del botón */
   }
   
