--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,57 +1,58 @@
-
-<ion-content >
-  <ion-grid>
-    <ion-row>
-     <ion-col size="6" class="ion-text-center">
-       <ion-text >
-         <h1>Lista de solicitudes</h1>
-       </ion-text>
-   
-   </ion-col>
-    </ion-row>
-     </ion-grid>
-
-<ion-grid >
-  <ion-row>
-    <ion-col size="4">
-      <ion-label >Fecha de inicio</ion-label>
-      <ion-input
-      type="date"
-         fill="outline"
-         placeholder=" Adquisicion"></ion-input>
-    </ion-col>
-    <ion-col size="4">
-      <ion-label >Fecha de termino</ion-label>
-      <ion-input
-      type="date"
-         fill="outline"
-         placeholder=" Vencimiento"></ion-input>
-    </ion-col>
-    <ion-col size="4">
-      <ion-button class="asuuu">Filtrar</ion-button>
-    </ion-col>
-  </ion-row>
-
-</ion-grid>
-
-
 <ion-content>
   <ion-grid>
-    <ion-row class="table-header">
-      <ion-col size="2">NUE</ion-col>
-      <ion-col size="5">Fecha de Nacimiento</ion-col>
-      <ion-col size="2">Descargar</ion-col>
-    </ion-row>
-
-    <!-- Ejemplo de datos en la tabla (puedes agregar más filas según sea necesario) -->
-    <ion-row class="table-row">
-      <ion-col size="2">NUE001</ion-col>
-      <ion-col size="5">01/01/1990</ion-col>
-      <ion-col size="2">
-        <ion-button  fill="clear">Descargar</ion-button>
+    <ion-row>
+      <ion-col size="6" class="ion-text-center">
+        <ion-text>
+          <h1>Lista de solicitudes</h1>
+        </ion-text>
       </ion-col>
     </ion-row>
   </ion-grid>
 
+  <ion-grid>
+    <ion-row>
+      <ion-col size="4">
+        <ion-label>Fecha de inicio</ion-label>
+        <ion-input
+          type="date"
+          fill="outline"
+          placeholder="Adquisicion"
+          [(ngModel)]="fechaInicio"
+          (ionChange)="onDateChange()"
+        ></ion-input>
+      </ion-col>
+      <ion-col size="4">
+        <ion-label>Fecha de termino</ion-label>
+        <ion-input
+          type="date"
+          fill="outline"
+          placeholder="Vencimiento"
+          [(ngModel)]="fechaFin"
+          (ionChange)="onDateChange()"
+        ></ion-input>
+      </ion-col>
+      <ion-col size="4">
+        <ion-button class="asuuu">Filtrar</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <ion-content>
+    <ion-grid>
+      <ion-row class="table-header">
+        <ion-col size="2">NUE</ion-col>
+        <ion-col size="5">Fecha de solicitud</ion-col>
+        <ion-col size="2">Archivo adjunto</ion-col>
+      </ion-row>
+
+      <!-- Ejemplo de datos en la tabla (puedes agregar más filas según sea necesario) -->
+      <ion-row class="table-row" *ngFor="let s of solicitudes">
+        <ion-col size="2">{{ s.NUE }}</ion-col>
+        <ion-col size="5">{{ s.fecha_subida }}</ion-col>
+        <ion-col size="2">
+          <ion-button (click)="abrirArchivoEnNuevaVentana(s.archivo)">Descargar</ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-content>
 </ion-content>
-</ion-content >
